CreateIndex via applyOps should notify opObserver in the WUOW of index commit

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.0.6, 4.1.7
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Storage NYC 2018-12-03, Storage NYC 2018-12-17
    • 68
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In createIndexForApplyOps, OpObserver::onCreateIndex() is called outside the WUOW of index commit, so it's possible that the build index via applyOps finishes without the corresponding oplog entry.

            Assignee:
            Louis Williams
            Reporter:
            Siyuan Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: