SERVER-37911 createIndex via applyOps should notify opObserver in the WUOW of index commit