src/mongo/db/repl/oplog.cpp
@@ -245,13 +245,20 @@ void createIndexForApplyOps(OperationContext* opCtx,
     OpCounters* opCounters = opCtx->writesAreReplicated() ? &globalOpCounters : &replOpCounters;
     opCounters->gotInsert();
 
-    bool relaxIndexConstraints =
-        ReplicationCoordinator::get(opCtx)->shouldRelaxIndexConstraints(opCtx, indexNss);
+    const IndexBuilder::IndexConstraints constraints =
+        ReplicationCoordinator::get(opCtx)->shouldRelaxIndexConstraints(opCtx, indexNss)
+        ? IndexBuilder::IndexConstraints::kRelax
+        : IndexBuilder::IndexConstraints::kEnforce;
+
+    const IndexBuilder::ReplicatedWrites replicatedWrites = opCtx->writesAreReplicated()
+        ? IndexBuilder::ReplicatedWrites::kReplicated
+        : IndexBuilder::ReplicatedWrites::kUnreplicated;
+
     if (indexSpec["background"].trueValue()) {
         if (mode == OplogApplication::Mode::kRecovering) {
             LOG(3) << "apply op: building background index " << indexSpec
                    << " in the foreground because the node is in recovery";
-            IndexBuilder builder(indexSpec, relaxIndexConstraints);
+            IndexBuilder builder(indexSpec, constraints, replicatedWrites);
             Status status = builder.buildInForeground(opCtx, db);
             uassertStatusOK(status);
         } else {
@@ -260,12 +267,15 @@ void createIndexForApplyOps(OperationContext* opCtx,
                 // If TempRelease fails, background index build will deadlock.
                 LOG(3) << "apply op: building background index " << indexSpec
                        << " in the foreground because temp release failed";
-                IndexBuilder builder(indexSpec, relaxIndexConstraints);
+                IndexBuilder builder(indexSpec, constraints, replicatedWrites);
                 Status status = builder.buildInForeground(opCtx, db);
                 uassertStatusOK(status);
             } else {
-                IndexBuilder* builder = new IndexBuilder(
-                    indexSpec, relaxIndexConstraints, opCtx->recoveryUnit()->getCommitTimestamp());
+                IndexBuilder* builder =
+                    new IndexBuilder(indexSpec,
+                                     constraints,
+                                     replicatedWrites,
+                                     opCtx->recoveryUnit()->getCommitTimestamp());
                 // This spawns a new thread and returns immediately.
                 builder->go();
                 // Wait for thread to start and register itself
@@ -275,15 +285,13 @@ void createIndexForApplyOps(OperationContext* opCtx,
 
         opCtx->recoveryUnit()->abandonSnapshot();
     } else {
-        IndexBuilder builder(indexSpec, relaxIndexConstraints);
+        IndexBuilder builder(indexSpec, constraints, replicatedWrites);
         Status status = builder.buildInForeground(opCtx, db);
         uassertStatusOK(status);
     }
     if (incrementOpsAppliedStats) {
         incrementOpsAppliedStats();
     }
-    getGlobalServiceContext()->getOpObserver()->onCreateIndex(
-        opCtx, indexNss, *(indexCollection->uuid()), indexSpec, false);
 }
 
 namespace {
